; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dmu_send.c_get_next_range.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dmu_send.c_get_next_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.send_range = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.send_range* (i32*, %struct.send_range*)* @get_next_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.send_range* @get_next_range(i32* %0, %struct.send_range* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.send_range*, align 8
  %5 = alloca %struct.send_range*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.send_range* %1, %struct.send_range** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load %struct.send_range*, %struct.send_range** %4, align 8
  %8 = call %struct.send_range* @get_next_range_nofree(i32* %6, %struct.send_range* %7)
  store %struct.send_range* %8, %struct.send_range** %5, align 8
  %9 = load %struct.send_range*, %struct.send_range** %4, align 8
  %10 = call i32 @range_free(%struct.send_range* %9)
  %11 = load %struct.send_range*, %struct.send_range** %5, align 8
  ret %struct.send_range* %11
}

declare dso_local %struct.send_range* @get_next_range_nofree(i32*, %struct.send_range*) #1

declare dso_local i32 @range_free(%struct.send_range*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
